--- a/assets/css/stylee.css
+++ b/assets/css/stylee.css
@@ -4,6 +4,9 @@
 :root {
   --font-heading: "Sen", sans-serif;
   --primary-color: #ffb900;
+  --line-height-btn: 50px;
+  --line-height-cta: 64px;
+  --border-radius-full: 999px;
 }
 html {
   font-size: 62.5%;
@@ -17,6 +20,15 @@ body {
 a {
   text-decoration: none;
 }
+
+.heading-lv2 {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.27;
+  letter-spacing: -0.76px;
+}
 .main-content {
   width: 1170px;
   max-width: calc(100% - 48px);
@@ -27,12 +39,12 @@ a {
   display: inline-block;
   min-width: 118px;
   padding: 0 16px;
-  line-height: 50px;
+  line-height: var(--line-height-btn);
   color: #fff;
   text-align: center;
   font-size: 1.6rem;
   font-weight: 600;
-  border-radius: 999px;
+  border-radius: var(--border-radius-full);
   background: #171100;
 }
 
@@ -195,7 +207,7 @@ a {
 
 .hero-cta {
   min-width: 180px;
-  line-height: 64px;
+  line-height: var(--line-height-cta);
   background-color: var(--primary-color);
 }
 
@@ -244,4 +256,39 @@ a {
 }
 .hero .stats strong:nth-child(2) {
   margin-left: 28px;
+}
+
+/* ==========Popular============ */
+
+.popular {
+  padding: 65px 0;
+  margin-top: 135px;
+}
+
+.popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular-top .desc {
+  margin-top: 16px;
+  width: 458px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  line-height: 1.67;
+}
+
+.popular-top .controls {
+  display: flex;
+  gap: 18px;
+}
+.popular-top .control-btn {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background: transparent;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid var(--primary-color);
 }
