--- a/assets/css/stylee.css
+++ b/assets/css/stylee.css
@@ -52,6 +52,19 @@ a {
   opacity: 0.9;
   cursor: pointer;
 }
+.line-clamp {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: var(--line-clamp, 1);
+}
+.line-clamp.line-2 {
+  --line-clamp: 2;
+}
+
+.break-all {
+  word-break: break-all;
+}
 /* ================header======================= */
 .header {
   background: #fffcf4;
@@ -301,6 +314,7 @@ a {
 }
 
 .popular .course-item {
+  flex: 1;
   border-radius: 12px;
   border: 1px solid #e2dfda;
   background: #fff;
